<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <LinearLayout android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
     <TextView android:id="@+id/username_label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:maxWidth = "100dp"
               android:ellipsize="end"
               android:singleLine="true"
               android:textStyle="bold"
               android:textSize="18sp"
               android:text="@string/username_label"/>
     <EditText
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/enter_username_hint"/>

    </LinearLayout>

  <LinearLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal">
    <TextView android:id="@+id/password_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:maxWidth = "100dp"
              android:ellipsize="end"
              android:singleLine="true"
              android:textStyle="bold"
              android:textSize="18sp"
              android:text="@string/password_label"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password_hint"
            android:password="true"
            />

  </LinearLayout>

  <Button
          android:id="@+id/submit_button"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/submit_button_text"
          />

</LinearLayout>
